--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4",
     "swiper": "^11.0.7",
+    "typewriter-effect": "^2.21.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
